make session-list page more responsive - fix funky layout breaks

--- a/src/app/mouse-list/mouse-list.component.css
+++ b/src/app/mouse-list/mouse-list.component.css
@@ -75,7 +75,7 @@ button.mat-raised-button:hover {
 }
 
 mat-checkbox.mouse_gender_menu_chbox {
-    margin-left: 12px;
+    margin-right: 12px;
 }
 
 .mouse_gender_menu{
